--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </h2>
        
                Give your favorite dinosaur:
-                <input type="text" name="dino"/>
+                <input type="text" name="dinosaur"/>
                 <br/>
                 <br/>
                
